# metar-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  index.html  metar.py  pyproject.toml
.github/workflows/: publish.yml
aviation_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: index.html
