[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metar-cli"
version = "0.3.5"
authors = [
  {name = "Alex gc"}
]
description = "Terminal METAR + TAF dashboard for pilots and aviation nerds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich",
    "requests",
    "prompt_toolkit",
]
license = {text = "MIT"}
classifiers = [
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/alexgc96/metar-cli"

[project.scripts]
metar = "metar:main"

[tool.setuptools]
py-modules = ["metar"]
